--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,8 @@
    Public API Request
 ======================================== */
 
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+/*@import url('https://fonts.googleapis.com/css?family=Nunito');*/
+@import url('https://fonts.googleapis.com/css?family=Cormorant');
 
 * {
 	box-sizing: border-box;
@@ -14,9 +15,17 @@ html, body {
 }
 
 body {
-    font-family: "Nunito", sans-serif;
+    /*font-family: "Nunito", sans-serif;*/
+    font-family: 'Cormorant', serif;
     text-align: center;
-    background: rgba(235, 235, 235, 0.9);
+    /*background: rgba(235, 235, 235, 0.9);*/
+    background:
+    linear-gradient(
+      to right, 
+      #B1EAFF , #fff 120%
+    );
+    border-style:none;
+}
 }
 
 header {
