--- a/css/styles.css
+++ b/css/styles.css
@@ -167,6 +167,30 @@ header h1 {
     border: 1px solid rgba(50, 50, 50, 0.3);
 }
 
+.modal-prev {
+    position: absolute;
+    top: 200px;
+    left: 15px;
+    cursor: pointer;
+    color: rgba(255, 255, 255, 0.9);
+    background: rgba(0, 0, 0, 0.8);
+    outline: none;
+    border-radius: 0.25em;
+    border: 1px solid rgba(50, 50, 50, 0.3);
+}
+
+.modal-next {
+    position: absolute;
+    top: 200px;
+    right: 15px;
+    cursor: pointer;
+    color: rgba(255, 255, 255, 0.9);
+    background: rgba(0, 0, 0, 0.8);
+    outline: none;
+    border-radius: 0.25em;
+    border: 1px solid rgba(50, 50, 50, 0.3);
+}
+
 .modal-img {
     width: 150px;
     margin-top: 35px;
